--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.08.2022 10:20:52</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.08.2022 10:48:15</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -157,7 +157,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk, peceny citron, balkansky dzuvec {ryze se zeleninou a rajcaty}, salatek 155</li><li>Spagety s chobotnici, kalamary, jalapenos, petrzelkovo-bazalkovym pestem a rimskym salatem {L} 179</li><li>Thajsky nudlovy salat s hovezim masem, cerstvou zeleninou a bylinkami, klicky, limetkovou zalivkou a arasidy 155</li><li>Burger s trhanou pecenou kachnou, kari-mangovym dresinkem, rimskym salatem a rajcetem, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s ementalem, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 155 </li></ol>
+<ol><li>Peceny pstruh, peceny citron, balkansky dzuvec {ryze se zeleninou a rajcaty}, salatek 155</li><li>Spagety s chobotnici, kalamary, jalapenos, petrzelkovo-bazalkovym pestem a rimskym salatem {L} 179</li><li>Thajsky salat s ryzovymi nudlemi, hovezim masem, cerstvou zeleninou a bylinkami, klicky, limetkovou zalivkou a arasidy 155</li><li>Burger s trhanou pecenou kachnou, kari-mangovym dresinkem, rimskym salatem a rajcetem, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s ementalem, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 155 </li></ol>
 </td>
 </tr>
 </table>
