--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.08.2022 08:46:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.08.2022 09:10:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -147,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh, peceny citron, balkansky dzuvec {ryze se zeleninou a rajcaty}, salatek 155</li><li>Spagety s chobotnici, kalamary, jalapenos, petrzelkovo-bazalkovym pestem a rimskym salatem {L} 179</li><li>Thajsky salat s ryzovymi nudlemi, hovezim masem, cerstvou zeleninou a bylinkami, klicky, limetkovou zalivkou a arasidy 155</li><li>Burger s trhanou pecenou kachnou, kari-mangovym dresinkem, rimskym salatem a rajcetem, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s ementalem, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 155 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a omackou salsa verde, cockovy salat s cerstvou zeleninou a bylinkami  155</li><li>Peceny filet z cerstveho mecouna s pecenymi rajcaty a omackou salsa verde, cockovy salat s cerstvou zeleninou a bylinkami 179</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 155</li><li>Bramborove gnocchi s listovym spenatem, gorgonzollou a uzenymi koroptvimi prsicky, salatek 175</li><li>Salat z pecene cervene repy s balkanskym syrem, sazenym vejcem, estragonovym dresinkem a zelenymi bylinkami 155</li></ol>
 </td>
 </tr>
 </table>
