Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.08.2022 10:15:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.08.2022 10:42:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pátek, 05. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová</strong>
+<strong>Polévka ze žluté čočky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Pečený losos se zeleninovým kuskusem a bylinkovou omáčkou</strong>
+<strong>Kuřecí s maďarskou omáčkou a rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							161,-
+							141,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí roláda plněná špenátem se šťouchaným bramborem</strong>
+<strong>Šišky bramborové s máslem, mákem a cukrem.</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							115,-
 						</span>
 </p>
 <p>
-<strong>Croque monsieur s hranolkami a hořčičnou majonézou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							139,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Vepřová Pečená žebra, Tilapie se sušenými rajčaty , pečené brambory, zelenina, rýže</strong>
+<strong>TEPLÝ BUFET: Tilapie se zeleninou, zebra, brambory, zelenina, ryze</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: čočkový s paprikou a chilli dresinkem, Míchaný z naší zahrádky</strong>
+<strong>SALÁTY: zeleninový kuskus, míchaná zelenina s hořčično-křenovým dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
