Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.08.2022 08:16:21</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.08.2022 08:48:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 8.8.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s mákem a tvarohem </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorská bageta s hermelínem</div>
+<div class="cena">79 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórková polévka s krutony v menu  <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórková polévka s krutony samostatně <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Vepřová krkovice, křenový dip, pečené brambory, jarní cibulka <em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>250g Kuřecí supreme na medu, kari rýže, kešu ořechy, koriandr <em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Bulgurový salát s pečenou zeleninou a avokádem, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a omackou salsa verde, cockovy salat s cerstvou zeleninou a bylinkami  155</li><li>Peceny filet z cerstveho mecouna s pecenymi rajcaty a omackou salsa verde, cockovy salat s cerstvou zeleninou a bylinkami 179</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 155</li><li>Bramborove gnocchi s listovym spenatem, gorgonzollou a uzenymi koroptvimi prsicky, salatek 175</li><li>Salat z pecene cervene repy s balkanskym syrem, sazenym vejcem, estragonovym dresinkem a zelenymi bylinkami 155</li></ol>
+<ol><li>Peceny cerstvy pstruh s maslovymi fazolemi, chorizem, rajcaty a bazalkou, salatek 155</li><li>Smazeny filet z cerstve norske tresky, letni bramborovy salat se zelenou cibulkou, cuketami a petrzelkou, citron {L} 179</li><li>Burrito s pikantnim mexickym carnitas {trhane veprove}, pecenymi paprikami a goudou, pecene brambory, jogurtovy dip, salatek {L} 155</li><li>Grilovane medailonky z krutich prsou s omackou salsa verde, letni bramborovy salat se zelenou cibulkou, cuketami a petrzelkou 179</li><li>Lasagne s paprikami, cuketami, cervenou cockou a rajcaty zapecene ve smetanove omacce s bazalkou, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
