--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.08.2022 08:48:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.08.2022 09:11:17</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pondělí, 08. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka ze žluté čočky</strong>
+<strong>Špenátová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí s maďarskou omáčkou a rýží</strong>
+<strong>Hamburská Vepřová plec s rýží NEBO těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>Špagety se sýrovou omáčkou, kuřecím masem a polníčkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>Šišky bramborové s máslem, mákem a cukrem.</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							115,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Tilapie se zeleninou, zebra, brambory, zelenina, ryze</strong>
+<strong>TEPLÝ BUFET: masové Lasagne s parmazánem, Tilapie s cibulkou a chilli, Smetanové brambory, rýže, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: zeleninový kuskus, míchaná zelenina s hořčično-křenovým dresinkem</strong>
+<strong>SALÁTY: Paprikový kuskus se sušenými rajčaty a bambusovými výhonky, míchaná zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
