Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.08.2022 08:47:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.08.2022 09:10:46</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 09. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Špenátová</strong>
+<strong>Rybí polévka se sušenými rajčaty</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hamburská Vepřová plec s rýží NEBO těstovinou</strong>
+<strong>Domácí sekaná s vajíčkem, vařený bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							143,-
 						</span>
 </p>
 <p>
-<strong>Špagety se sýrovou omáčkou, kuřecím masem a polníčkem</strong>
+<strong>Hovězí stroganov s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: masové Lasagne s parmazánem, Tilapie s cibulkou a chilli, Smetanové brambory, rýže, zelenina</strong>
+<strong>Teplý salát z červené čočky s pečenou paprikou a balkánským sýrem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie se zeleninou, kuřecí prsa v sýrové omáčce, brambory, Mrkvička, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Paprikový kuskus se sušenými rajčaty a bambusovými výhonky, míchaná zelenina</strong>
+<strong>SALÁTY: tzatziki, paprikový kuskus s chilli a sušenými rajčaty, polníček</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -140,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s maslovymi fazolemi, chorizem, rajcaty a bazalkou, salatek 155</li><li>Smazeny filet z cerstve norske tresky, letni bramborovy salat se zelenou cibulkou, cuketami a petrzelkou, citron {L} 179</li><li>Burrito s pikantnim mexickym carnitas {trhane veprove}, pecenymi paprikami a goudou, pecene brambory, jogurtovy dip, salatek {L} 155</li><li>Grilovane medailonky z krutich prsou s omackou salsa verde, letni bramborovy salat se zelenou cibulkou, cuketami a petrzelkou 179</li><li>Lasagne s paprikami, cuketami, cervenou cockou a rajcaty zapecene ve smetanove omacce s bazalkou, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Pecena kruta s omackou teryiaki a prazenym sezamem a zelenymi bylinkami, jasminova ryze, salatek 155</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry, gratinovane brambory, salatek z cerstve mlade cervene repy s cerstvou bazalkou 179</li><li>Thajske zlute kari s pecenym tofu, paprikami, dyni,  zeleninou a kokosovym mlekem, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
