Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 08:16:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 08:47:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -92,7 +92,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Pecena kruta s omackou teryiaki a prazenym sezamem a zelenymi bylinkami, jasminova ryze, salatek 155</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry, gratinovane brambory, salatek z cerstve mlade cervene repy s cerstvou bazalkou 179</li><li>Thajske zlute kari s pecenym tofu, paprikami, dyni,  zeleninou a kokosovym mlekem, jasminova ryze 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s reckou rajcatovou salsou s orechy a bylinkami, irsky colcannon {stouchane brambory se zelenou cibulkou a kapustou} salat z cerstve cervene repy s bazalkou 155</li><li>Peceny filet z cerstveho norskeho lososa s reckou rajcatovou salsou s orechy a bylinkami, irsky colcannon, salat z cerstve cervene repy s bazalkou 179</li><li>Marocka pikantni hovezi tazin s pecenou dyni, rajcaty, zelenymi bylinkami a korenim ras el hanout, kuskus, salatek {L} 155</li><li>Doruzova pecena panenska svickova na luzku s fazolovych lusku, gratinovane brambory, salatek 179</li><li>Arabsky smazeny cizrnovy falafel, matovy jogurtovy dip, korenena ryze, salatek 155</li></ol>
 </td>
 </tr>
 </table>
