--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 08:47:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 09:11:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,17 +7,17 @@
 <h5>Středa, 10. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Rybí polévka se sušenými rajčaty</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Domácí sekaná s vajíčkem, vařený bramborem a hořčicí</strong>
+<strong>Selská kotleta s pečenými bramborami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							145,-
 						</span>
 </p>
 <p>
@@ -35,7 +35,7 @@
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie se zeleninou, kuřecí prsa v sýrové omáčce, brambory, Mrkvička, rýže</strong>
+<strong>TEPLÝ BUFET: Tilapie se zeleninou, kuřecí špalíčky, brambory, Mrkvička, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
