Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 09:11:16</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 09:36:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -21,17 +21,17 @@
 						</span>
 </p>
 <p>
-<strong>Hovězí stroganov s rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>Teplý salát z červené čočky s pečenou paprikou a balkánským sýrem</strong>
+<strong>Staročeské kroupy se zelím a uzenou krkovičkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s grilovanými kuřecími křidélky</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
 						</span>
 </p>
 <p>
@@ -42,7 +42,7 @@
 						</span>
 </p>
 <p>
-<strong>SALÁTY: tzatziki, paprikový kuskus s chilli a sušenými rajčaty, polníček</strong>
+<strong>SALÁTY: polníček, červená řepa s kozím sýrem, zeleninový s balkánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -59,7 +59,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 10.8.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Brokolicový krém s ořechy v menu <em title="Mléko">7</em><em title="Skořápkové plody">8</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Brokolicový krém s ořechy samostatně <em title="Mléko">7</em><em title="Skořápkové plody">8</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Svíčková hovězí na smetaně, karlovarský knedlík, brusinky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na máslové zelenině, celerové pyré, kukuřičný klas <em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Grilovaná červená řepa, bramborová kaše, rukolový salát s cherry rajčaty <em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>300g Bavorská bageta s kuřecím masem a bbq omáčkou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">89 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>300g Bavorská bageta se šunkou a sýrem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>50g Mini mrkvový dort <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>250g Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
